# phoneme-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
phoneme_converter/: __init__.py  converter.py
